# aerospike

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/aerospike/: flow.py  geometry.py  plotting.py  solver.py  types.py
src/aerospike_gui/: __main__.py  controller.py  main.py  window.py
src/aerospike_gui/widgets/: ambient_inputs.py  engine_inputs.py  expansion_inputs.py  export_panel.py  plot_panel.py  results_panel.py  save_load_panel.py  sizing_inputs.py  solve_panel.py
tests/: test_controller.py  test_flow.py  test_geometry.py  test_plotting.py  test_solver.py  test_types.py  test_window.py
