[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aerospike"
version = "0.1.0"
description = "Modern aerospike nozzle solver based on CC Lee 1963 algorithm"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }

authors = [
    { name = "Giorgio" }
]

keywords = [
    "aerospike",
    "rocket",
    "nozzle",
    "thermodynamics",
    "propulsion",
    "CFD",
    "aerospace"
]

classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization"
]

dependencies = [
    "numpy",
    "matplotlib",
]

[project.optional-dependencies]
gui = [
    "PySide6",
]
test = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
aerospike-gui = "aerospike_gui.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=aerospike --cov-report=term-missing"
